fix NPE in tests
GitOrigin-RevId: a5672ba258976b105cf368886e1d12f0a822e6df